--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "async": "0.2.x",
     "request": "2.26.x",
     "sspawn": "0.1.1",
-    "cluestr-provider": "0.x.x"
+    "cluestr-provider": "0.x.x",
+    "newrelic": "1.x.x"
   },
   "devDependencies": {
     "mocha": "1.11.x",
