--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cluestr-provider-PROVIDER",
+  "name": "anyfetch-PROVIDER_NAME-PROVIDER",
   "version": "0.1.0",
-  "author": "Matthieu Bacconnier <matthieu.bacconnier@papiel.fr>",
+  "author": "You <you@example.com>",
   "bin": {
     "server": "./bin/server"
   },
@@ -14,10 +14,10 @@
   "main": "./lib/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Papiel/provider-PROVIDER"
+    "url": "https://github.com/YOU/PROVIDER_NAME.provider.example.com"
   },
   "keywords": [
-    "cluestr",
+    "anyfetch",
     "provider",
     "PROVIDER"
   ],
@@ -25,7 +25,7 @@
     "async": "0.2.x",
     "request": "2.30.x",
     "sspawn": "0.1.1",
-    "cluestr-provider": "0.x.x",
+    "anyfetch-provider": "0.x.x",
     "newrelic": "1.x.x"
   },
   "devDependencies": {
@@ -34,7 +34,7 @@
     "supertest": "0.8.x",
     "jshint": "2.3.x"
   },
-  "licence": "Copyright Papiel",
+  "licence": "MIT",
   "engines": {
     "node": ">=0.10"
   }
