End of renaming

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script: npm test
 env:
   global:
     - PROVIDER_CONNECT_URL="http://localhost:8000/init/connect"
-    - PROVIDER_CLUESTR_ID="CLUESTR-ID"
-    - PROVIDER_CLUESTR_SECRET="CLUESTR-SECRET"
+    - PROVIDER_ANYFETCH_ID="CLUESTR-ID"
+    - PROVIDER_ANYFETCH_SECRET="CLUESTR-SECRET"
