--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "request": "2.34.x",
     "sspawn": "0.1.1",
     "anyfetch-provider": "^0.3.15",
-    "newrelic": "1.x.x"
+    "newrelic": "1.x.x",
+    "dotenv": "^0.4.0"
   },
   "devDependencies": {
     "mocha": "1.18.x",
