--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_script: npm install --dev
 script: npm test
 env:
   global:
-    - PROVIDER_CONNECT_URL="http://localhost:8000/init/connect"
+    - PROVIDER_URL="http://localhost:8000"
     - PROVIDER_ANYFETCH_ID="CLUESTR-ID"
     - PROVIDER_ANYFETCH_SECRET="CLUESTR-SECRET"
