--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script: npm test
 env:
   global:
     - PROVIDER_URL="http://localhost:8000"
-    - PROVIDER_ANYFETCH_ID="CLUESTR-ID"
-    - PROVIDER_ANYFETCH_SECRET="CLUESTR-SECRET"
+    - ANYFETCH_API_ID="CLUESTR-ID"
+    - ANYFETCH_API_SECRET="CLUESTR-SECRET"
