--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: node_js
 services: mongodb
 node_js:
 - '0.10'
-before_script: npm install --dev
-script: npm test
+script:
+  - npm test
+  - npm run-script lint
 env:
   global:
     - PROVIDER_URL="http://localhost:8000"
-    - ANYFETCH_API_ID="CLUESTR-ID"
-    - ANYFETCH_API_SECRET="CLUESTR-SECRET"
+    - ANYFETCH_API_ID="ANYFETCH-ID"
+    - ANYFETCH_API_SECRET="ANYFETCH-SECRET"
