--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async": "0.9.x",
     "dotenv": "^0.4.0",
     "node-linkedin": "^0.3.5",
+    "rarity": "^2.1.1",
     "request": "2.49.x"
   },
   "devDependencies": {
