--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "anyfetch-PROVIDER_NAME-PROVIDER",
+  "name": "anyfetch-linkedin",
   "version": "0.1.0",
-  "author": "You <you@example.com>",
+  "author": "antoninribeaud@gmail.com",
   "bin": {
     "server": "./bin/server"
   },
@@ -13,18 +13,17 @@
   "main": "./lib/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/YOU/PROVIDER_NAME.provider.example.com"
+    "url": "https://github.com/AnyFetch/linkedin-provider.anyfetch.com"
   },
   "keywords": [
     "anyfetch",
     "provider",
-    "PROVIDER"
+    "linkedin"
   ],
   "dependencies": {
     "anyfetch-provider": "^3.0.9",
     "async": "0.9.x",
     "dotenv": "^0.4.0",
-    "node-linkedin": "^0.3.5",
     "rarity": "^2.1.1",
     "request": "2.49.x"
   },
