--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "async": "0.9.x",
     "dotenv": "^0.4.0",
     "rarity": "^2.1.1",
-    "request": "2.49.x"
+    "request": "2.49.x",
+    "supertest": "0.15.x"
   },
   "devDependencies": {
     "jscs": "^1.10.0",
     "jshint": "^2.6.0",
     "mocha": "2.0.x",
-    "should": "4.3.x",
-    "supertest": "0.15.x"
+    "should": "4.3.x"
   },
   "licence": "MIT",
   "engines": {
